--- a/product.html
+++ b/product.html
@@ -56,9 +56,9 @@
 
                                 <span class="shopping_buttons">
                                     <button class="minus_btn">-</button>
-                                    <p class="quantity_number">1</p>
+                                    <span class="quantity_number"><p>1</p></span>
                                     <button class="plus_btn">+</button>
-                                    <button class="addtocart_btn">ADD TO CART</button>
+                                    <button class="addtocart_btn"><p>ADD TO CART</p></button>
                                 </span>
                             </span>
                         </div>
@@ -98,35 +98,35 @@
 
     <article class="product_suggestions">
         <span class="center">
-            <h3>You might also like</h3>
+            <h3 class="mightlike">You might also like</h3>
         </span>
         <div class="wrapper5">
 
-            <div class="box">
+            <div class="box suggestion1">
                 <img class="suggestion_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
                 <p class="suggestion_title">Femme Fatale</p>
                 <p class="suggestion_winery">Carpe Diem</p>
                 <p class="suggestion_price">150 DKK</p>
             </div>
-            <div class="box">
+            <div class="box suggestion2">
                 <img class="suggestion_img" src="images/photos/wineshop/1mimisauvignonblanc.png" alt="" />
                 <p class="suggestion_title">Sauvignon Blanc</p>
                 <p class="suggestion_winery">Castel Mimi</p>
                 <p class="suggestion_price">125 DKK</p>
             </div>
-            <div class="box">
+            <div class="box suggestion3">
                 <img class="suggestion_img" src="images/photos/wineshop/1gitanararaneagra.png" alt="" />
                 <p class="suggestion_title">Rara Neagra</p>
                 <p class="suggestion_winery">Gitana</p>
                 <p class="suggestion_price">175 DKK</p>
             </div>
-            <div class="box">
+            <div class="box suggestion4">
                 <img class="suggestion_img" src="images/photos/wineshop/1surori.png" alt="" />
                 <p class="suggestion_title">Surori Rose</p>
                 <p class="suggestion_winery">Gitana</p>
                 <p class="suggestion_price">195 DKK</p>
             </div>
-            <div class="box">
+            <div class="box suggestion5">
                 <img class="suggestion_img" src="images/photos/wineshop/1feteascaalba.png" alt="" />
                 <p class="suggestion_title">Feteasca Alba</p>
                 <p class="suggestion_winery">Castel Mimi</p>
@@ -136,5 +136,55 @@
     </article>
 
 
+        <footer>
+            <div class="footergrid">
+                <div class="footer_1">
+                    <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+                    <p>Phone: +45 40116274</p>
+                    <p>Mail: info@moldovin.dk</p>
+                    <p>CVR: 38570609</p>
+                </div>
+
+                <div class="footer_2">
+                    <div class="f2_information">
+                        <p class="ftitle_style">Information</p>
+                         <p><a class="footerlink" href="aboutus.html">About us</a></p>
+                        <p>Wineries</p>
+                        <p>Shipping</p>
+                    </div> <br>
+                    <div class="f2_Useful Links">
+                        <p class="ftitle_style">Useful Links</p>
+                        <p>Contact us</p>
+                        <p>Leave a review</p>
+                        <p>Terms and Conditions</p>
+                    </div>
+                </div>
+
+                         <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <div class="partners">
+                        <img class="partnerlogo" src="images/photos/footer/5f4e9fa3a3a86039291d36c6_kihoskh.png">
+                        <img class="partnerlogo" src="images/photos/footer/barpoldo.png">
+                        <img class="partnerlogo" src="images/photos/footer/Carpe%20Diem.png">
+                        <img class="partnerlogo" src="images/photos/footer/castelmimi.png">
+                        <img class="partnerlogo" src="images/photos/footer/fautor.png">
+                        <img class="partnerlogo" src="images/photos/footer/gitana-winery-logo-6940F08529-seeklogo.com.png">
+                        <img class="partnerlogo" src="images/photos/footer/notyourusualwinebar.png">
+                        <img class="partnerlogo" src="images/photos/footer/vinveto.png">
+                    </div>
+                </div>
+
+
+            </div>
+            </div>
+
+            <p class="copyright">Copyright © Moldovin</p>
+        </footer>
     <script src="script.js"></script>
 </body></html>
