--- a/wineshop.html
+++ b/wineshop.html
@@ -37,32 +37,14 @@
     <ul class="filterul"></ul>
     <template id="categories_template">
         <li class="filterli">
-            <div class="whitefilter_dot"></div>
-            <p class="whitefilter_title">WHITE</p>
+<!--            <div class="whitefilter_dot"></div>-->
+            <p class="whitefilter_title"></p>
         </li>
     </template>
 
     <section class="filternav">
         <ul class="filterwrapper">
-            <li><a href="" class="allwines_filter">ALL WINES</a></li>
-            <li>
-                <a href="" class="white_filter">
-                    <div class="whitefilter_dot"></div>
-                    <p class="whitefilter_title">WHITE</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="red_filter">
-                    <div class="redfilter_dot"></div>
-                    <p class="redfilter_title">RED</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="rose_filter">
-                    <div class="rosefilter_dot"></div>
-                    <p class="rosefilter_title">ROSE</p>
-                </a>
-            </li>
+
         </ul>
     </section>
 
