--- a/wineshopcategory.html
+++ b/wineshopcategory.html
@@ -18,6 +18,7 @@
                 <li><a href="aboutus.html">ABOUT US</a></li>
                 <li><a href="wineshop.html">WINE SHOP</a></li>
                 <li><a href="events.html">EVENTS</a></li>
+                <div><a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
             </ul>
         </nav>
     </header>
@@ -37,8 +38,8 @@
     <template id="categories_template">
         <ul class="filterul">
             <li class="filterli">
-                <div class="whitefilter_dot"></div>
-                <p class="whitefilter_title">WHITE</p>
+<!--                <div class="whitefilter_dot"></div>-->
+                <p class="whitefilter_title"></p>
             </li>
         </ul>
     </template>
@@ -46,25 +47,7 @@
 
     <section class="filternav">
         <ul class="filterwrapper">
-            <li><a href="" class="allwines_filter">ALL WINES</a></li>
-            <li>
-                <a href="" class="white_filter">
-                    <div class="whitefilter_dot"></div>
-                    <p class="whitefilter_title">WHITE</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="red_filter">
-                    <div class="redfilter_dot"></div>
-                    <p class="redfilter_title">RED</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="rose_filter">
-                    <div class="rosefilter_dot"></div>
-                    <p class="rosefilter_title">ROSE</p>
-                </a>
-            </li>
+
         </ul>
     </section>
 
@@ -82,6 +65,58 @@
             </div>
         </article>
     </template>
+
+                <footer>
+
+            <div class="footergrid">
+                <div class="footer_1">
+                    <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+                    <p>Phone: +45 40116274</p>
+                    <p>Mail: info@moldovin.dk</p>
+                    <p>CVR: 38570609</p>
+                </div>
+
+                <div class="footer_2">
+                    <div class="f2_information">
+                        <p class="ftitle_style">Information</p>
+                         <p><a class="footerlink" href="aboutus.html">About us</a></p>
+                        <p>Wineries</p>
+                        <p>Shipping</p>
+                    </div> <br>
+                    <div class="f2_Useful Links">
+                        <p class="ftitle_style">Useful Links</p>
+                        <p>Contact us</p>
+                        <p>Leave a review</p>
+                        <p>Terms and Conditions</p>
+                    </div>
+                </div>
+
+                         <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <div class="partners">
+                        <img class="partnerlogo" src="images/photos/footer/5f4e9fa3a3a86039291d36c6_kihoskh.png">
+                        <img class="partnerlogo" src="images/photos/footer/barpoldo.png">
+                        <img class="partnerlogo" src="images/photos/footer/Carpe%20Diem.png">
+                        <img class="partnerlogo" src="images/photos/footer/castelmimi.png">
+                        <img class="partnerlogo" src="images/photos/footer/fautor.png">
+                        <img class="partnerlogo" src="images/photos/footer/gitana-winery-logo-6940F08529-seeklogo.com.png">
+                        <img class="partnerlogo" src="images/photos/footer/notyourusualwinebar.png">
+                        <img class="partnerlogo" src="images/photos/footer/vinveto.png">
+                    </div>
+                </div>
+
+
+            </div>
+            </div>
+
+            <p class="copyright">Copyright © Moldovin</p>
+        </footer>
 
     <script src="script.js"></script>
 </body></html>
